<resources>
    <string name="app_name">채곡채곡</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn`t support Camera2 API.</string>

    <string name="login_explanation">로그인 후에 \n다양한 채식 습관을 길러보세요.</string>
    <string name="user_email">이메일</string>
    <string name="user_nickname">닉네임</string>
    <string name="user_password">비밀번호</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="login_kakao">카카오 로그인</string>
    <string name="logout">로그아웃</string>
    <string name="register">회원가입</string>
    <string name="guest">비회원 이용</string>
    <string name="forgot_password"><u>비밀번호가 기억나지 않으신가요?</u></string>

    <string name="bookmark">북마크</string>
    <string name="comment">댓글</string>
    <string name="comment_input">댓글을 입력하세요</string>
    <string name="registration">등록</string>
    <string name="profile_update">프로필 수정</string>
    <string name="user_name">사용자 닉네임</string>
    <string name="user_type">사용자 채식유형</string>
    <string name="user_allergy">사용자 알러지</string>
    <string name="user_profile">사용자 프로필</string>
    <string name="modification">수정</string>
    <string name="more">더보기</string>

    <string name="interests">관심 분야</string>
    <string name="environment">환경</string>
    <string name="animal_right">동물권</string>
    <string name="health">건강</string>
    <string name="religion">종교</string>
    <string name="etc">기타</string>

    <string name="diet_type">채식 타입</string>
    <string name="vegan">비건</string>
    <string name="lacto">락토</string>
    <string name="ovo">오보</string>
    <string name="lacto_ovo">락토오보</string>
    <string name="pollo">폴로</string>
    <string name="pesco">페스코</string>
    <string name="none">지향없음</string>

    <string name="allergy_type">알러지 종류</string>
    <string name="buckwheat">메밀</string>
    <string name="wheat">밀</string>
    <string name="soybean">대두</string>
    <string name="walnut">호두</string>
    <string name="peanut">땅콩</string>
    <string name="peach">복숭아</string>
    <string name="tomato">토마토</string>
    <string name="poultry">난류(가금류)</string>
    <string name="milk">우유</string>
    <string name="shrimp">새우</string>
    <string name="mackerel">고등어</string>
    <string name="mussels">홍합</string>
    <string name="abalone">전복</string>
    <string name="oyster">굴</string>
    <string name="shellfishery">조개류</string>
    <string name="crab">게</string>
    <string name="squid">오징어</string>
    <string name="sulfur_dioxide">아황산 포함식품</string>

    <string name="restaurant_name">식당명</string>
    <string name="restaurant_type">종류</string>
    <string name="restaurant_address">주소</string>
    <string name="restaurant_time">영업시간</string>
    <string name="restaurant_dayoff">휴무일</string>
    <string name="restaurant_img">식당 사진</string>
    <string name="restaurant_info_btn">식당 상세 페이지 버튼</string>
    <string name="restaurant_search_btn">식당 검색</string>
    <string name="search_account">계정 검색</string>
    <string name="search_btn">검색</string>
    <string name="account">계정</string>
    <string name="recipe">레시피</string>
    <string name="product">제품</string>
    <string name="restaurant">식당</string>

    <string name="restaurant_review_edit">리뷰 수정</string>
    <string name="restaurant_rating">별점</string>
    <string name="average_rating">평균별점</string>
    <string name="write_restaurant_review">해당 식당에 대한 리뷰를 적어주세요.</string>
    <string name="restaurant_infomation">가게정보</string>
    <string name="restaurant_info">정보</string>
    <string name="restaurant_menu">메뉴</string>
    <string name="restaurant_photo">사진</string>
    <string name="restaurant_review">리뷰</string>
    <string name="upload_photo">사진 등록</string>
    <string name="write_review">리뷰작성</string>

    <string name="mypage">마이페이지</string>
    <string name="setting">설정</string>
    <string name="changePw">비밀번호 변경</string>
    <string name="block_list">차단</string>
    <string name="cancle_block">차단 해제</string>
    <string name="help">도움말</string>
    <string name="information">정보</string>
    <string name="provision">이용약관</string>
    <string name="pim">개인정보정책</string>
    <string name="opensource">오픈소스</string>
    <string name="receive_notification">알림메세지 수신동의</string>
    <string name="delete_account">계정삭제</string>

    <string name="ocr_textview">제품의 식품유형표를 인식해주세요.</string>
    <string name="incompatible_ingredient_name">부적합 원재료명</string>
    <string name="positive_ocr">USER_ID님의 채식유형에\n적합한 제품입니다.</string>
    <string name="ingredient_name">원재료명</string>
    <string name="allergen_ingredient_name">알러지 유발 원재료명</string>
    <string name="recommended_product">추천 제품</string>
    <string name="no_recommended_product">추천 제품이 없습니다</string>
    <string name="ocr_scan">스캔하기</string>

    <string name="password_reset">비밀번호 재설정</string>
    <string name="password_reset_text">비밀번호 재설정을 위해\n이메일을 입력해주세요.</string>
    <string name="send">보내기</string>

    <string name="register_step1">채곡채곡 1/4</string>
    <string name="register_step2">채곡채곡 2/4</string>
    <string name="register_step3">채곡채곡 3/4</string>
    <string name="register_step4">채곡채곡 4/4</string>
    <string name="fill_info">가입자 정보를 채워주세요.</string>
    <string name="email_verify"><u>양식을 모두 작성하고 메일 인증을 진행해주세요.</u></string>
    <string name="next_step">다음 단계로</string>
    <string name="vegan_interest_reason">채식에 관심을 갖게 된 계기는 무엇인가요?</string>
    <string name="choose_diet_type">채식주의 유형을 선택해주세요.</string>
    <string name="choose_allergy">알레르기 종류를 선택해주세요.</string>

    <string name="new_post">새 게시물</string>
    <string name="post_title">제목</string>
    <string name="write_post">내용 입력</string>
    <string name="share_post">공유</string>
    <string name="post_writer">작성자</string>
    <string name="like">좋아요</string>

    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="default_image">기본이미지</string>
    <string name="choose_photo_function">사진을 불러올 기능을 선택하세요</string>

    <string name="account_delete_text">정말 계정을 삭제하시겠습니까?\n한번 삭제하시면 관련된 정보가 전부 사라지며 복구할 수 없습니다.</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="choose_logout">로그아웃 하시겠습니까?</string>
    <string name="email_authentication_text"> 입력 칸 모두 작성하시고 이메일 인증 진행해주세요.</string>
    <string name="email_re_authentication_text"> 이메일 인증이 확인되지 않습니다.\n다시 시도해주세요.</string>
    <string name="email_authentication_resend">재전송</string>
    <string name="email_authentication_success">인증 완료</string>\

    <string name="my_feed_text">게시물을 올려 사용자들과 자유롭게 공유하세요</string>
    <string name="in_progress">준비 중입니다..</string>
    <string name="location">위치보기</string>
    <string name="make_call">전화걸기</string>

</resources>