<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterStep4Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/hssaemaul_regular"
        android:text="@string/register_step4"
        android:textAlignment="center"
        android:textColor="#1b1b1b"
        android:textSize="40sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_allergy"
        android:fontFamily="@font/pretendardregular"
        android:textAlignment="center"
        android:textColor="#1b1b1b"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"  />

    <Button
        android:id="@+id/Btn_RegisterFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/Tv_SelectedAllergy"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:fontFamily="@font/pretendardregular"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/Cb_memil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buckwheat" />

            <CheckBox
                android:id="@+id/Cb_mil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wheat" />

            <CheckBox
                android:id="@+id/Cb_daedu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soybean" />

            <CheckBox
                android:id="@+id/Cb_hodu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walnut" />

            <CheckBox
                android:id="@+id/Cb_peanut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peanut" />

            <CheckBox
                android:id="@+id/Cb_peach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peach" />

            <CheckBox
                android:id="@+id/Cb_tomato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomato" />

            <CheckBox
                android:id="@+id/Cb_poultry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poultry" />

            <CheckBox
                android:id="@+id/Cb_milk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milk" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:fontFamily="@font/pretendardregular"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/Cb_shrimp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shrimp" />

            <CheckBox
                android:id="@+id/Cb_mackerel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mackerel" />

            <CheckBox
                android:id="@+id/Cb_mussel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mussels" />

            <CheckBox
                android:id="@+id/Cb_abalone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abalone" />

            <CheckBox
                android:id="@+id/Cb_oyster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oyster" />

            <CheckBox
                android:id="@+id/Cb_shellfish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shellfishery" />

            <CheckBox
                android:id="@+id/Cb_crab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crab" />

            <CheckBox
                android:id="@+id/Cb_squid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/squid" />

            <CheckBox
                android:id="@+id/Cb_sulfurous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sulfur_dioxide" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/Tv_SelectedAllergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Btn_RegisterFinish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>