<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MypageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_update"
            android:layout_gravity="center"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/Iv_Edit_Mypage_Profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:contentDescription="@string/profile_update"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Et_Edit_Mypage_UserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:importantForAutofill="no"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <Button
            android:id="@+id/Btn_EditAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center"
            android:text="@string/modification"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interests" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/Cb_Environment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/selector_radio_button_mini"
            android:textColor="@drawable/selector_radio_text"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/pretendardregular"
            android:textSize="15sp"
            android:text="@string/environment"/>
        <CheckBox
            android:id="@+id/Cb_Animal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/selector_radio_button_mini"
            android:textColor="@drawable/selector_radio_text"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/pretendardregular"
            android:textSize="15sp"
            android:text="@string/animal_right"/>
        <CheckBox
            android:id="@+id/Cb_Health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/selector_radio_button_mini"
            android:textColor="@drawable/selector_radio_text"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/pretendardregular"
            android:textSize="15sp"
            android:text="@string/health"/>
        <CheckBox
            android:id="@+id/Cb_Religion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/selector_radio_button_mini"
            android:textColor="@drawable/selector_radio_text"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/pretendardregular"
            android:textSize="15sp"
            android:text="@string/religion"/>
        <CheckBox
            android:id="@+id/Cb_Etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/selector_radio_button_mini"
            android:textColor="@drawable/selector_radio_text"
            android:gravity="center"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/pretendardregular"
            android:textSize="15sp"
            android:text="@string/etc"/>

        <TextView
            android:id="@+id/Tv_Edit_VeganReason"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/diet_type" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TableRow>
        <RadioGroup
            android:id="@+id/Rg_veganType1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Radio_Vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/selector_radio_button_mini"
                android:button="@null"
                android:fontFamily="@font/pretendardregular"
                android:gravity="center"
                android:text="@string/vegan"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/Radio_Lacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/selector_radio_button_mini"
                android:button="@null"
                android:fontFamily="@font/pretendardregular"
                android:gravity="center"
                android:text="@string/lacto"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/Radio_Ovo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/selector_radio_button_mini"
                android:button="@null"
                android:fontFamily="@font/pretendardregular"
                android:gravity="center"
                android:text="@string/ovo"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/Radio_LactoOvo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/selector_radio_button_mini"
                android:button="@null"
                android:fontFamily="@font/pretendardregular"
                android:gravity="center"
                android:text="@string/lacto_ovo"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/Radio_Pollo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/selector_radio_button_mini"
                android:button="@null"
                android:gravity="center"
                android:text="@string/pollo"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="15sp" />

        </RadioGroup>
        </TableRow>

        <TableRow>
        <RadioGroup
            android:id="@+id/Rg_veganType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Radio_Pesco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/selector_radio_button_mini"
                android:button="@null"
                android:fontFamily="@font/pretendardregular"
                android:gravity="center"
                android:text="@string/pesco"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/Radio_etc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/selector_radio_button_mini"
                android:button="@null"
                android:fontFamily="@font/pretendardregular"
                android:gravity="center"
                android:text="@string/none"
                android:textColor="@drawable/selector_radio_text"
                android:textSize="15sp" />
        </RadioGroup>
            <TextView
                android:id="@+id/Tv_Edit_VeganType"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="invisible"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/allergy_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:fontFamily="@font/pretendardregular"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/Cb_memil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buckwheat" />

                    <CheckBox
                        android:id="@+id/Cb_mil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wheat" />

                    <CheckBox
                        android:id="@+id/Cb_daedu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/soybean" />

                    <CheckBox
                        android:id="@+id/Cb_hodu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/walnut" />

                    <CheckBox
                        android:id="@+id/Cb_peanut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peanut" />

                    <CheckBox
                        android:id="@+id/Cb_peach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peach" />

                    <CheckBox
                        android:id="@+id/Cb_tomato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomato" />

                    <CheckBox
                        android:id="@+id/Cb_poultry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/poultry" />

                    <CheckBox
                        android:id="@+id/Cb_milk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/milk" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:fontFamily="@font/pretendardregular"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/Cb_shrimp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shrimp" />

                    <CheckBox
                        android:id="@+id/Cb_mackerel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mackerel" />

                    <CheckBox
                        android:id="@+id/Cb_mussel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mussels" />

                    <CheckBox
                        android:id="@+id/Cb_abalone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abalone" />

                    <CheckBox
                        android:id="@+id/Cb_oyster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oyster" />

                    <CheckBox
                        android:id="@+id/Cb_shellfish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shellfishery" />

                    <CheckBox
                        android:id="@+id/Cb_crab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crab" />

                    <CheckBox
                        android:id="@+id/Cb_squid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/squid" />

                    <CheckBox
                        android:id="@+id/Cb_sulfurous"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sulfur_dioxide" />

                    <TextView
                        android:id="@+id/Tv_Edit_Allergy"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:visibility="invisible" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>