<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_gravity = "center"
        android:padding = "20dp"
        android:text = "@string/choose_photo_function"/>

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content">

        <Button
            android:id = "@+id/Btn_Camera"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:text = "@string/camera"/>

        <Button
            android:id = "@+id/Btn_Gallery"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:text = "@string/gallery"/>

    </LinearLayout>
</LinearLayout>