<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_gravity = "center"
        android:padding = "20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:text = "@string/email_re_authentication_text"/>

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content">

        <Button
            android:id = "@+id/Btn_ReSend"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:text = "@string/email_authentication_resend"/>

        <Button
            android:id = "@+id/Btn_Cancle"
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:text = "@string/cancel"/>

    </LinearLayout>
</LinearLayout>